; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_memory.c_jsonp_malloc.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_memory.c_jsonp_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @jsonp_malloc(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = call i8* @do_malloc(i64 %8)
  store i8* %9, i8** %2, align 8
  br label %10

10:                                               ; preds = %7, %6
  %11 = load i8*, i8** %2, align 8
  ret i8* %11
}

declare dso_local i8* @do_malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
